Update 3.Mạng Ethernet LAN.md

--- a/PhanHiep/CCNA/3.Mạng Ethernet LAN.md
+++ b/PhanHiep/CCNA/3.Mạng Ethernet LAN.md
@@ -32,3 +32,9 @@ LAN là viết tắt của Local Area Network tạm dịch là mạng máy tính
     * Sử dụng trong phạm vi ngắn, hạn chế di chuyển.
     * Khó khăn trong việc bảo trì.
     * Chi phí lắp đặt tăng cao với Ethernet, hub, thiết bị chuyển mạch, bộ định tuyến. 
+
+
+## Tài liệu tham khảo
+[thầy Phương](https://www.youtube.com/watch?v=i6Vdy4ymf7s&list=PL5XLqU3Q-TRLqP79n8QAi2TdkW3hLtYbD&index=7)    
+[Ethernet](https://www.thegioididong.com/hoi-dap/ethernet-la-gi-dung-de-lam-gi-so-voi-wifi-thi-nhu-the-nao-1314385)    
+[LAN](https://netsystem.vn/ethernet-la-gi-cac-tinh-nang-hang-dau-cua-ethernet/)
