--- a/PhanHiep/CCNA/5. Telnet, CDP, SSH.md
+++ b/PhanHiep/CCNA/5. Telnet, CDP, SSH.md
@@ -30,13 +30,29 @@
 - Giao thức SSH sử dụng TCP chạy trên port 22
 - SSH tượng tự như telnet là giúp cho việc truy cập từ xa nhưng nó hơn telnet ở điểm là nó cung cấp 1 cơ chế mã hóa toàn bộ dữ liệu. Còn telnet thì truyền dữ liệu ở dạng clear text. Nên SSH bảo mật hơn.
 - SSH thiết lập một kênh kết nối riêng tư cho người dùng, hơn nữa nó tunneling của các công cụ nó cho truyền các giao thức khác bên trong tunneling này.
-- SSH có cơ chế mã hóa đủ mạnh để ngăn chặn các tấn công nghe lén, đánh cắp thông tin trên đường truyền => sử dụng SSH trong hệ thống để an toàn và bảo mật hơn.
-![](../CCNA/images/z3438083619827_41752dc3cb36d4779615622a6c37f0f9.jpg)
+- SSH có cơ chế mã hóa đủ mạnh để ngăn chặn các tấn công nghe lén, đánh cắp thông tin trên đường truyền => sử dụng SSH trong hệ thống để an toàn và bảo mật hơn.        
 
+![](../CCNA/images/z3438083619827_41752dc3cb36d4779615622a6c37f0f9.jpg)
+### Kỹ thuật mã hóa SSH
+Có 3 cách khác nhau để mã hóa qua SSH:
+1. Symmetrical encryption
+![](../CCNA/images/z3438120270192_2b9b022a1bb7988987cd32f380665481.jpg)    
+* Symmetric encryption là một dạng mã hóa sử dụng secret key ở cả 2 chiều mã hóa và giải mã tin nhắn bởi cả host và client. Có nghĩa là ai nắm được khóa đều có thể giải mã tin nhắn trong quá trình chuyền.
+* Symmetric keys được sử dụng để mã hóa toàn bộ liên lạc trong phiên giao dịch SSH. Cả client và server tạo chung một key bí mật như là một phương thức thỏa thuận, và key đó không được tiết lộ cho bên thứ ba.
+* Điều khiến cho thuật toán an toàn là vì key không được truyền giữa client và host. Thay vào đó, cả 2 máy tính chia sẽ thông tin chung và sau đó sử dụng chúng để tính ra khóa bí mật.Kể cả có máy khác bắt được thông tin chung, nó cũng không thể tính ra key bí mật vì không biết được thuật toán tạo key.
+2. Asymmetric Encryption    
+Không giống với symmetrical encryption, asymmetrical encryption sử dụng 2 khóa khác nhau để mã hóa và giải mã. 2 khóa này được gọi là public key và private key.
+![](../CCNA/images/z3438134677970_742c39857134c1a38dc2923b508a1b7b.jpg)  
+
+3. Hashing    
+* Hashing một chiều là một dạng mã hóa khác sử dụng trong Secure Shell Connections. Hash một chiều khác với cả 2 phương thức mã hóa trên ở chỗ nó không được sinh ra để giải mã. Chúng tạo ra một giá trị duy nhất với độ dài nhất định cho mỗi lần nhập liệu mà không có hướng nào khác để khai thác
+![](../CCNA/images/z3438144648050_9e245844d34863f1c0522dfa03a49462.jpg)
 ## So sánh Telnet và SSH
 ![](../CCNA/images/z3438062075223_0be2a7549873b6e059bb0d333006658b.jpg)   
 
-
+* SSH sử dụng hashes để xác nhận tính xác thực của tin nhắn. Nó được thực hiện bởi HMACs, hoặc Hash-based Message Authentication Codes.
+* Mỗi tin nhắn được truyền đi phải chứa MAC, được tính bởi symmetric key, packet sequence number, và nội dung tin nhắn. 
 # Tài liệu tham khảo
 [Telnet](https://www.totolink.vn/article/135-telnet-la-gi-tim-hieu-ve-giao-thuc-telnet.html)   
-[telnet CDP SSH](https://securityzone.vn/t/bai-10-cau-hinh-telnet-cdp-ssh-tren-cisco-ios.10/)
+[Telnet CDP SSH](https://securityzone.vn/t/bai-10-cau-hinh-telnet-cdp-ssh-tren-cisco-ios.10/)   
+[SSH](https://www.hostinger.vn/huong-dan/ssh-la-gi-va-cach-su-dung-ssh-cho-nguoi-moi-bat-dau)
