--- a/PhanHiep/CCNA/7. Switch.md
+++ b/PhanHiep/CCNA/7. Switch.md
@@ -39,3 +39,7 @@ Có 3 phương thức chuyển mạch
     * Định tuyến giống Router.
     * Thiết lập các chính sách trong mạng
 * Core : chủ yếu là Router. Kết nối ra internet hay kết nối các site...
+
+# Tài liệu tham khảo    
+[SW](https://securityzone.vn/t/bai-7-tim-hieu-ve-switch-cisco.6/)    
+[SW](https://maychuvatly.com/blog/thiet-bi-chuyen-mach-trong-mang-may-tinh-la-gi-tu-hoc-ccna-bai-6/)   
