Update 9. Routing Information Protocol.md

--- a/PhanHiep/CCNA/9. Routing Information Protocol.md
+++ b/PhanHiep/CCNA/9. Routing Information Protocol.md
@@ -51,3 +51,7 @@ chú ý : Router chỉ trao đổi với Router nào kết nối trực tiếp t
 
 ## So sánh RIPv1 và Ripv2
 ![](../CCNA/images/z3458639184567_92c088c3194295f37df1f93c0d85cdfd.jpg)    
+
+
+# Tài liệu tham khảo
+[RIP](https://securityzone.vn/t/bai-13-tim-hieu-ve-giao-thuc-dinh-tuyen-rip.78/)
