Update 9. Routing Information Protocol.md

--- a/PhanHiep/CCNA/9. Routing Information Protocol.md
+++ b/PhanHiep/CCNA/9. Routing Information Protocol.md
@@ -19,10 +19,10 @@ chú ý : Router chỉ trao đổi với Router nào kết nối trực tiếp t
 * Giả sử C mất mạng 10.4.0.0 mà C chỉ còn 3 mạng 10.1.0.0, 10.2.0.0, 10.3.0.0 30s sau C gửi Routing Table của nó cho B. không có sự thay đổi.
 * 30s tiếp theo B gửi lai Routing table của nó cho C lúc này trên B có 4 mạng. C thấy có sự thay đổi C học thêm mạng 10.4.0.0 thông qua cổng S0 đến đến B. Để đến mạng 10.4.0.0 phải đi ra khỏi cổng S1 của B à Metric tăng lên 1. Metric =2
 * 30s tiếp theo C lại gửi routing table cho B và B cập nhật lại
-* Cứ tiếp tục như vậy thì Routing table của B va C sẽ thay đổi Metric của mạng 10.4.0.0 tăng liên tục. à hệ lụy của nó là A cũng sẽ bị ảnh hưởng. Và số Metric này sẽ tăng liên tục theo B và C.
+* Cứ tiếp tục như vậy thì Routing table của B va C sẽ thay đổi Metric của mạng 10.4.0.0 tăng liên tục. Và hệ lụy của nó là A cũng sẽ bị ảnh hưởng. Và số Metric này sẽ tăng liên tục theo B và C.
 
 > Đây là một nhược điểm cuản RIP khi một mạng của ta bị mất đi. Chỉ sô Metric liên tục thay đổi thì hiện tượng này gọi là Loop trong mạng.
-> Khi bị Loop như vầy thì hệ thống mạng sẽ ko hoạt động được vì Metric thay đổi liên tục là CPU hoạt động liên tục à performance tăng.
+> Khi bị Loop như vầy thì hệ thống mạng sẽ ko hoạt động được vì Metric thay đổi liên tục là CPU hoạt động liên tục, performance tăng.
 
 ## Cơ chế chống Loop trong giao thức RIP
 ### Giới hạn metric = 16
