--- a/PhanHiep/CCNA/10. Tìm hiểu về DHCP.md
+++ b/PhanHiep/CCNA/10. Tìm hiểu về DHCP.md
@@ -31,3 +31,9 @@ Khi client chấp nhận DHCP Offer nó sẽ gửi lên server DHCP gói tin DHC
 
 ## Nhược điểm của DHCP     
 Bởi DHCP sử dụng chủ yếu với các hộ gia đình hay văn phòng. Đối với các thiết bị dùng trong văn phòng, như máy in thì việc việc gán chúng với các địa chỉ IP thay đổi không mang tính thực tiễn. Lúc đó mỗi khi kết nối với máy tính khác thì máy in đó sẽ phải thường xuyên cập nhật cài đặt để máy tính có thể kết nối với máy in.
+
+
+# Tài liệu tham khảo
+
+[DHCP](https://www.totolink.vn/article/111-dhcp-la-gi-tim-hieu-ve-dhcp.html)           
+[DHCP](https://securityzone.vn/t/bai-16-tim-hieu-va-cau-hinh-dhcp-tren-cisco.93/)
