Update 11. VLAN (Virtual Local Area Netwwork).md

--- a/PhanHiep/CCNA/11. VLAN (Virtual Local Area Netwwork).md
+++ b/PhanHiep/CCNA/11. VLAN (Virtual Local Area Netwwork).md
@@ -36,4 +36,5 @@ Cần cân nhắc việc sử dụng VLAN trong các trường hợp sau:
 * Protocol – based VLAN: Cách cấu hình này gần giống như MAC Address based, nhưng sử dụng một địa chỉ logic hay địa chỉ IP thay thế cho địa chỉ MAC. Cách cấu hình không còn thông dụng nhờ sử dụng giao thức DHCP.
 # Tài liệu tham khảo
 [VLAN](https://quantrimang.com/vlan-la-gi-lam-the-nao-de-cau-hinh-mot-vlan-tren-switch-cisco-64830)      
-[VLAN](https://www.dienmayxanh.com/kinh-nghiem-hay/vlan-la-gi-co-can-thiet-su-dung-khong-lam-the-nao-1137273)
+[VLAN](https://www.dienmayxanh.com/kinh-nghiem-hay/vlan-la-gi-co-can-thiet-su-dung-khong-lam-the-nao-1137273)   
+[vlan](https://itforvn.com/bai-6-vlan-trunking-vtp/)
