--- a/PhanHiep/CCNA/08. Định tuyến tĩnh.md
+++ b/PhanHiep/CCNA/08. Định tuyến tĩnh.md
@@ -8,7 +8,16 @@
 * Không tiêu tốn tài nguyên của hệ thống Router tính toán đường đi như định tuyến động
 * Bảo mật vì Router chỉ hoạt động dựa vào các đường đi mà Admin chỉ định
 * Rất khó khắc phục sự cố, phải cấu hình lại khi có sự thay đổi về địa chỉ mạng cũng như các thiết bị.
-## Cấu hình định tuyến tĩnh           
+## Cấu hình định tuyến tĩnh   
+* Cho topo như sau: 
+    - Gán các địa chỉ IP vào các router.
+    - Gán IP cho các PC trên cùng dải mạng với router được kết nối trực tiếp.
+    - Định tuyến tĩnh cho các router.
+* Kết quả:
+    - Các PC có thể thông được với nhau bằng thực hiện lệnh ping => hai pc có thể kết nối được với nhau. Nếu lệnh ping thực hiện không thông thì có các khả năng sau:
+        * Địa chỉ IP gõ nhầm (không cùng dải mạng đã cho).
+        * Định tuyến xảy ra lỗi do nhầm next hop.      
+
 ![](../CCNA/images/z3458188294938_fbf22c68cd871f282440fb0a840a5423.jpg)    
 
 ### Cấu hình Router0, Router 1        
