--- a/PhanHiep/CCNA/12. trunking.md
+++ b/PhanHiep/CCNA/12. trunking.md
@@ -27,3 +27,6 @@ Thay vì chèn 4 byte vào Ethernet Frame thì người ta chèn 26 byte vào He
 * INDEX:(16bit) chỉ ra chỉ số port nguồn của gói tin tồn tại trên Switch.
 * RES: (16 bit) sử dụng khi Token ring hoặc FDDI được đóng gói frame ISL, với frame Ethernet trường RES được set tất cả bit 0.
 >Chuẩn trunking này là chuẩn độc quyền của Cisco và chỉ chạy trên thiết bị Cisco. Hoạt động đóng Tag trên đường trunk và mở tag ISL cũng hoạt động giống như 802.1Q encapsulation.
+
+# Tài liệu tham khảo
+[trunking](https://itforvn.com/bai-6-vlan-trunking-vtp/)         
