Update 16. Giao thúc EIGRP.md

--- a/PhanHiep/CCNA/16. Giao thúc EIGRP.md
+++ b/PhanHiep/CCNA/16. Giao thúc EIGRP.md
@@ -10,10 +10,55 @@
     * Thoả mãn các điều kiện xác thực
     * Cùng bộ tham số K
             
-        * Giá trị AS – Autonomous System:Khi cấu hình EIGRP trên router, người quản trị phải khai báo AS mà router này thuộc về. Giá trị này buộc phải khớp nhau giữa 2 router kết nối trực tiếp với nhau để các router này có thể thiết lập mối quan hệ láng giềng.
+        * Giá trị AS – Autonomous System(hệ tự trị): Khi cấu hình EIGRP trên router, người quản trị phải khai báo AS mà router này thuộc về. Giá trị này buộc phải khớp nhau giữa 2 router kết nối trực tiếp với nhau để các router này có thể thiết lập mối quan hệ láng giềng.
         
         * Các địa chỉ đầu nối: Để 2 router thiết lập được quan hệ láng giềng với nhau, hai địa chỉ đầu nối giữa 2 router phải cùng subnet.
 
         * Thỏa mãn các điều kiện xác thực: Như các giao thức khác, để tang cường tính an ninh trong hoạt động trao đổi thông tin định tuyến,trên router có thể thực hiện cấu hình password để xác thực thông tin định tuyến nhận được từ các router khác. Hai router nếu có cấu hình xác thực thì phải thống nhất với nhau về password đã cấu hình thì mới có thể thiết lập quan hệ láng giềng với nhau.
 
         * Cùng bộ tham số K: EIGRP sử dụng một loại công thức tính metric phức tạp, là một hàm của bốn biến số: bandwidth, delay, load, reliability:Metric = f (bandwidth, delay, load, reliability)Các biến số này có thể được gắn với các trọng số để tang hoặc giảm bớt ảnh hưởng của chúng gọi là các tham số K gồm 5 giá trị K1, K2, K3, K4, K5. 
+        ![](../CCNA/images/z3463869588654_0e4455537d711d853a9a8b903dbcd442.jpg)
+
+
+2. Bảng Topology.      
+* Sau khi thiết lập quan hệ láng giềng, các router láng giềng của nhau sẽ lập tức gửi toàn bộ các route EIGRP trong bảng định tuyến của chúng.
+* Chúng chỉ gửi bảng định tuyến lần đầu tiên, các lần sau sẽ gửi các bản cập nhật nếu có bất kỳ thay đổi gì.
+* Khi router nhận được nhiều route từ nhiều láng giềng khác nhau, nó sẽ chọn cái tốt nhất để đưa vào sử dụng, các route khác nó sẽ đưa vào một "kho chứa" để dùng cho mục đích dự phòng đường đi. Kho chứa này được gọi là bảng "Topology". Khi đó, bảng Topology trên một router chạy EIGRP là bảng lưu toàn bộ route có thể có từ nó đến mọi đích đến trong mạng, và bảng định tuyến sẽ là bảng lấy và sử dụng route tốt nhất từ bảng Topology này.
+* Chúng ta tiến hành tính toán đường đi tốt nhất đến Dest.EIGRP sử dụng một công thức rất phức tạp để tính toán metrics là bandwidth, delay, load và reliability.   
+    * Router R3 sẻ quảng bá đến R2 metric từ nó đến Dest. Cost này được gọi là AD(Advertised Distance). Lúc đó giá trị AD này sẻ được lưu vào bảng Topology trên R2. Khi đó R2 sẻ biết rằng AD để đến Dest là 5
+![](../CCNA/images/z3463916542609_f2e43edd2335cb1f814dd18b3e62fbf1.jpg)     
+    * Lúc đó giá trị AD này sẻ được lưu vào bảng Topology trên R2. Khi đó R2 sẻ biết rằng AD để đến Dest là 5     
+![](../CCNA/images/z3463922765815_762c1c67cdc7570025ecf45a7bb1c29f.jpg)     
+    * Ở đây ta cần ghi nhớ. AD: là thông số mà neighbor cho ta biết metric bao nhiêu từ neighbor đến Destination.
+![](../CCNA/images/z3463922765815_762c1c67cdc7570025ecf45a7bb1c29f.jpg)    
+    * Metric 10 giữa R2 và R3 là directly connected. R2 sẻ biết tổng metric để đến Dest là 15. Thông số này được gọi là FD(Feasible Distance) và nó được lưu trong bảng Topology.     
+![](../CCNA/images/z3463937211955_1fbf28288f56494557daa38311b1d6f1.jpg)     
+    * Ở đây ta cần ghi nhớ. AD: là thông số mà neighbor cho ta biết metric bao nhiêu từ neighbor đến Destination.
+![](../CCNA/images/z3464192677497_afd267f4ac4591e8e26c098d02fd6030.jpg)
+ * FD: là thông số tổng metric để đi đến Destination. Bước tiếp theo R2 sẻ gửi FD = 15 của nó đến R1. R1 sẻ lưu lại thông tin này trong bảng Topology Table của nó và giá trị này là giá trị AD từ R2 gửi sang.
+
+* R1 sau đó sẻ tính ra được khoảng cách FD = 25. Thông tin này sẻ được lưu vào Topology table.Best-route chính là đường nào có thông số FD nhỏ nhất.Best-route đi đến Destination được gọi là Successor. Successor sẻ được copy từ Topology table sang Routing table làm đường chính đi đến đích.
+
+* EIGRP cũng cho ta một cơ chế tạo đường backup khi có sự cố. Đường này gọi là Feasible Successor. Vậy cơ chế để tạo ra đường backup Feasible Successor như thế nào. Chúng ta cùng xét sơ đồ sau:
+![](../CCNA/images/z3464205041822_f4f593583b34435e5e1c47e27fa8e6c8.jpg)    
+Ta thiết lập bảng Topology của sơ đồ trên cho R1:
+![](../CCNA/images/z3464205886476_227d170b0e7e71acb8fcf24056e64900.jpg)    
+* Theo bảng Topology trên thì Đường đi qua R2 sẻ trở thành Successor (vì có FDmin đến Destination).
+* Vậy làm sao để ta chọn được Feasible Successor. Ta sẻ tìm theo công thức sau:“AD của đường nào nhỏ hơn FDmin” thì đường đó sẻ trở thành Feasible Successor.
+* Nói cách khác AD của Feasible Successor < FD của Successor. Vậy thì theo công thức trên đường đi qua R4 (AD=9) sẻ trở thành Feasible Successor và  được sử dụng như một đường backup. Nhưng chúng ta chỉ có thể thấy Successor được điền vào bản Routing table.
+* Nếu đường Successor mất, EIGRP sẻ copy đường Feasible Successor và đưa vào bảng định tuyến ngay lập tức mà không cần bầu chọn lại.
+* Nên đó chính là lý do ta có thể nói EIGRP hội tụ rất nhanh so với các giao thức khác nếu Feasible Successor đã có sẳn trong Topology table.
+* Ở đây EIGRP có một đặc tính mà các giao thức khác không có đó là “Load-balancing” trên các đường có metrics không bằng nhau. Ta sẻ sử dụng một thông số đó là “variance”. Trong ví dụ trên ta thấy. Success có FD = 10. Feasible Successor có FD = 109. Để load-balance.
+
+    * Feasible Successor cần có FD nhỏ hơn “X” lần của Successor.
+
+    * Nếu ta set variance = 2, ta có FD = 20 < 109 ( không đạt)
+
+    * Nếu ta set variance = 7, ta có FD = 70 < 109 ( không đạt)
+
+    * Nếu ta set variance = 11, ta có FD = 110 > 109 (đạt yêu cầu)
+
+Vậy nếu ta set “variance” bằng 11 thì đường Feasible Successor sẻ được điền vào Routing Table và Load-balance cùng lúc với Successor theo tỉ lệ 11:1.
+
+# Tài liệu tham khảo
+[EIGRP](https://itforvn.com/tu-hoc-ccna-bai-13-giao-thuc-eigrp/)
