Update 16. Giao thúc EIGRP.md

--- a/PhanHiep/CCNA/16. Giao thúc EIGRP.md
+++ b/PhanHiep/CCNA/16. Giao thúc EIGRP.md
@@ -59,6 +59,17 @@ Ta thiết lập bảng Topology của sơ đồ trên cho R1:
     * Nếu ta set variance = 11, ta có FD = 110 > 109 (đạt yêu cầu)
 
 Vậy nếu ta set “variance” bằng 11 thì đường Feasible Successor sẻ được điền vào Routing Table và Load-balance cùng lúc với Successor theo tỉ lệ 11:1.
+## Các đặc điểm của EIRGP
+EIGRP hoạt động khác với IGRP. Về bản chất EIGRP là một giao thức định tuyến dạng distance-vector nhưng khi cập nhật và bảo trì thông tin router lân cận và thông tin định tuyến thì nó làm việc giống như một giao thức định tuyến dạng link-state. Sau đây là các ưu điểm của EIGRP so với giao thức định tuyến distance-vector cách thông thường:
+* Tốc độ hội tụ nhanh.
+* Sử dụng băng thông hiệu quả.
+* Có hỗ trợ mạng VLSM (Variable- Length Subnet Mask) và định tuyến liên miền không phân lớp CIDR (Classless Interdomain Routing). Không giống như IGRP, EIGRP có trao đổi thông tin về subnet mask nên nó hỗ trợ được cho hệ thống IP không theo lớp.
+* Hỗ trợ cho nhiều giao thức mạng khác nhau.
+* Không phụ thuộc vào giao thức được định tuyến. Nhờ cấu trúc từng phần riêng biệt tương ứng với từng giao thức mà EIGRP không cần phải chỉnh sửa lâu. Ví dụ như khi phát triển để hỗ trợ một giao thức mới như IP chẳng hạn, EIGRP cần phải có thêm phần mới tương ứng cho IP nhưng hoàn toàn không cần phải viết lại EIGRP.    
+
+EIGRP router hội tụ nhanh vì chúng sử dụng thuật toán DUAL. DUAL bảo đảm hoạt động không bị lặp vòng khi tính toán đường đi, cho phép mọi router  trong hệ thống mạng thực hiện đồng bộ cùng lúc khi có sự thảy đổi xảy ra.   
+ EIGRP sử dụng băng thông (Bandwidth) hiệu quả vì nó chỉ gửi thông tin cập nhật một phần và giới hạn chứ không gửi toàn bộ bảng định tuyến
 
 # Tài liệu tham khảo
-[EIGRP](https://itforvn.com/tu-hoc-ccna-bai-13-giao-thuc-eigrp/)
+[EIGRP](https://itforvn.com/tu-hoc-ccna-bai-13-giao-thuc-eigrp/)     
+[dd](https://www.forum.vnpro.org/forum/ccnp-enterprise/encor/420991-giao-th%E1%BB%A9c-%C4%91%E1%BB%8Bnh-tuy%E1%BA%BFn-eigrp)
