--- a/PhanHiep/Linux/01. Giới thiệu về Linux.md
+++ b/PhanHiep/Linux/01. Giới thiệu về Linux.md
@@ -1,4 +1,4 @@
-# Introduction
+# Giới thiệu về Linux
 ## Định nghĩa 
 * Wikipedia: Linux là một họ các hệ điều hành tự do mã nguồn mở tương tự Unix dựa trên Linux kernel 
 * Linux là phần mềm mã nguồn mở (Open-source software), được phân phối dưới ”Giấy phép công cộng GNU” (GNU General Public License – GPL)
