Update 04. Linux System.md

--- a/PhanHiep/Linux/04. Linux System.md
+++ b/PhanHiep/Linux/04. Linux System.md
@@ -9,11 +9,11 @@
     * runlevel
     * systemctl get-default
     * systemctl list-units
-    * systemctl set-default
+    * systemctl set-default    
     * systemctl cat file.service
     * systemctl {start/stop/restart/enable/disable/status} file.service
     * systemctl daemon-reload
-    * systemctl isolate multi-user.targe
+    * systemctl isolate multi-user.targe       
 ![](../Linux/images/z3488242431242_c0cbd12cc2203bf2110ed9199fe09c97.jpg)
 
 ### Init system: location
@@ -25,7 +25,7 @@
 1. copy và override theo thứ tự ưu tiên
 2. Tạo thư mục cùng tên với unit + “.d”. Sử dụng file config .conf: override hoặc extend.
 
-### Init system: service management        
+### Init system: service management             
 ![](../Linux/images/z3488307541066_42451eaefee54ce949247a98cc9f3b1d.jpg)    
 
 ### Init system: write your own service
@@ -113,5 +113,22 @@ Cấu trúc chung gồm: Unit, Service, Install.
     * Năm 2015 trở thành filesystem mặc định trên SUSE Enterprise Linux.
     * Năm 2017, Red Hat thông báo không hỗ trợ sử dụng kể từ RHEL 7.4
 
-
+## Partitions and mount point
+### Partitions
+* Partition: chia 1 đĩa lưu trữ (storage device) thành nhiều vùng logic.
+* MBR: Master Boot Record
+    * Maximum Hard drive size ~ 2TB
+    * BIOS and UEFI support (nhưng có thể có lỗi hoặc không tương thích trong vài trường hợp)
+* GPT: GUID Partition Table
+    * Maximum Hard drive size: 9400000000TB
+    * UEFI only.
+### Mount point
+* Mount point: là một directory (thường là empty) mà có thể truy cập được trong một filesystem hiện có, 
+và được dùng để mount một filesystem khác vào. 
+* Mount point trở thành root directory của filesystem vừa mount vào.
+* Filesystem vừa mount vào được truy cập thông qua mount point.
+* Commands:
+    * mount 
+    * umount
+    * cat /proc/mounts
 
