--- a/HaHong/Docker/1. Tìm hiểu về docker, container, image và cách cài đặt docker.md
+++ b/HaHong/Docker/1. Tìm hiểu về docker, container, image và cách cài đặt docker.md
@@ -3,7 +3,7 @@
 #### VMware
 
 ![](image1/Vm.png)
-- Sự xuất hiện của VMware, đã cho phép chúng ta chạy nhiều ứng dụng trên 1 server một cách an toàn. Nó có thể chạy các ứng dụng mới trên các máy chủ hiện có với dung lượng dự phòng=> Tiệt kiệm 
+- Scoự xuất hiện của VMware, đã cho phép chúng ta chạy nhiều ứng dụng trên 1 server một cách an toàn. Nó có thể chạy các ứng dụng mới trên các máy chủ hiện có với dung lượng dự phòng=> Tiệt kiệm 
 - Tuy nhiên thì VMs không hoàn hảo, mỗi OS đều tiêu thụ CPU, RAM và tài nguyên khác điều đó có thể sử dụng để sử dụng nhiều ứng dụng hơn. Chưa hết,vài trường hợp ,mỗi OS yêu cầu 1 license . VM khởi động chậm và tính di động không lớn(di chuyển giữa các trình ảo hóa và nền tảng đám mây khó hơn mức cần thiết)
 ### Containers
 Một chương trình chạy hoàn hảo trên một máy, nhưng khi chuyển sang máy khác thì lại trở nên hỗn loạn?
